k8s/server-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector: 
    component: server
  ports:
    - port: 5000
      targetPorts: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
       - name: server
         image: muzammilmomin/multi-server
         ports:
          - containerPort: 5000
